# py_toys

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
cluster/: deploy-local.yaml  deploy.yaml  flask-env-configmap.yaml  ingress.yaml  issuer-prod.yaml  issuer-staging.yaml  namespaces.yaml  nodeport.yaml  service.yaml  speech-sdk-secret.yaml
instance/: assistant.sqlite
src/: __init__.py  config.py  db.py  schema.sql  sqlite_db.py
src/models/: speech.py  user.py
src/static/: msTextAudio.js  panda.png:Zone.Identifier  style.css  style.css.backup
src/templates/: index.html
src/templates/user/: login.html
src/views/: chatGPT.py  speech.py  text_to_speech.py  user.py
