[metadata]
name = assistant
version = 0.1.0
description = a collection for my tools
author = PandaRyshan
author_email = ryshan@pandas.run
license = BSD-3-Clause
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.10
install_requires =
    Jinja2==3.1.2
    Werkzeug==2.2.3
    Flask==2.2.3
    Flask-SQLAlchemy==3.0.3
    Flask-Login==0.6.2
    Flask-WTF==1.1.1
    Flask-Admin==1.6.1
    Flask-Security==3.0.0
    Flask-Caching==2.0.2
    Flask-Mail==0.9.1
    email-validator==1.3.1
    azure-cognitiveservices-speech==1.26.0
    WTForms==3.0.1
    setuptools==65.5.1
    wheel==0.38.4
    itsdangerous==2.1.2
    python-dotenv==1.0.0

[options.extras_require]
test =
    pytest==7.2.2
prod =
    gunicorn==20.1.0

[tool.pytest]
testpaths =
    tests

[tool.ruff]
line_length = 100
ignore =
    E115
